# Picosplit

./: .gitignore  ATTRIBUTIONS.md  Cargo.toml  LICENSE  README.md
res/cfg/: cfg.toml
res/sys/: cli.yaml
src/: cfg.rs  main.rs
src/gfx/: mod.rs  psapp.rs  util.rs
src/gfx/shaders/: basic_cmp.rs  mod.rs
src/graphics/: mod.rs  windowing.rs
