[package]
name = "picosplit"
version = "0.1.0"
authors = ["Freyja Valkyrie"]
edition = "2018"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
ron = "0.6"

[dependencies.clap]
version = "2.33"
default-features = false

[dependencies.conrod]
version = "0.53.0"
features = ["glium", "winit"]
